# crewai_stock_researcher

./: README.md  pyproject.toml
src/stock_conclusion/: __init__.py  crew.py  main.py
src/stock_conclusion/common/: utils.py
src/stock_conclusion/config/: agents.yaml  tasks.yaml
src/stock_conclusion/configs/: config.py  env.yaml  logging.py
src/stock_conclusion/tools/: __init__.py  balancesheet_tool.py  gathernews_tool.py  incomestatement_tool.py  insidertransaction_tool.py  sentimentanalysis_tool.py  stockprice_tool.py  websearch_tool.py
