[project]
name = "stock_conclusion"
version = "0.1.0"
description = "stock-conclusion using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "crewai[tools]>=0.126.0,<1.0.0",
    "nrclex",
    "textblob>=0.19.0",
    "yfinance>=0.2.61",
]

[project.scripts]
stock_conclusion = "stock_conclusion.main:run"
run_crew = "stock_conclusion.main:run"
train = "stock_conclusion.main:train"
replay = "stock_conclusion.main:replay"
test = "stock_conclusion.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
